--- a/css/header.css
+++ b/css/header.css
@@ -100,5 +100,9 @@ Acessa o elemento 'a' do header
         border-radius: 4px;
     }
 
+    .header h1 {
+        font-size: 2.3rem;
+    }
+
 }
 
