--- a/css/header.css
+++ b/css/header.css
@@ -100,9 +100,14 @@ Acessa o elemento 'a' do header
         border-radius: 4px;
     }
 
-    .header h1 {
-        font-size: 2rem;
+    .header h1::before{
+        content: '';
+    }
+    
+    .header h1::after{
+        content: '';
     }
 
 }
+
 
